--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Mor och Son</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style_original.css">
   <meta name="description" content="Vi är en väldigt litet och familjärt företag som skapar rätt ljudinnehåll för rätt kunder">
 
   <meta property="og:title" content="">
@@ -40,8 +40,17 @@
     <p>Melodi och känsla som fastnar.</p>
   </main>
 
-  <footer>
-    <p>&copy; 2025 Mor & Son AB</p>
+  <footer class="site-footer">
+    <div class="footer-inner">
+      <div class="contact-info">
+        <h4>Mor & Son AB</h4>
+        <p>Ringvägen 38A<br>118 67 Stockholm</p>
+        <p>kontakt@morochson.se<br>0737533004</p>
+      </div>
+    </div>
+    <div class="footer-bottom">
+      <p>Mor & Son AB © 2025 &middot; Webbdesign av Josephiny</p>
+    </div>
   </footer>
 
   <script src="js/app.js"></script>
